feat: modification du titre principal en français

--- a/src/app/sign-up/sign-up.html
+++ b/src/app/sign-up/sign-up.html
@@ -3,7 +3,7 @@
     <img src="/assets/images/woman-illustration.svg" alt="Financial Freedom Illustration" class="floating-illustration">
 
     <section class="left-panel">
-        <h1>Steps into the real<br>Financial freedom.</h1>
+        <h1>Bienvenue sur votre espace<br>Financial freedom.</h1>
     </section>
 
     <section class="right-panel">
