--- a/src/app/sign-up/sign-up.scss
+++ b/src/app/sign-up/sign-up.scss
@@ -83,7 +83,7 @@
     width: 100%;
 }
 
-.social-btn {
+/* --- .social-btn {
     flex: 1;
     display: flex;
     align-items: center;
@@ -111,7 +111,7 @@
     left: 20px;
     width: 30px;
     height: auto;
-}
+}--- */
 
 /* --- CHAMPS INPUT (LARGEUR 85%) --- */
 .input-group {
@@ -227,7 +227,7 @@
         gap: 15px;
     }
     
-    .social-btn {
+    /* .social-btn {
         width: 100%; 
         justify-content: center;
     }
@@ -238,7 +238,7 @@
         width: 20px;
         display: block; 
         left: auto;
-    }
+    }*/
     
     .input-group, .submit-btn {
         width: 100%;
@@ -314,7 +314,7 @@
         width: 100%;
     }
 
-    /* Ajustement responsive des boutons sociaux pour qu'ils ne s'écrasent pas */
+    /* Ajustement responsive des boutons sociaux pour qu'ils ne s'écrasent pas
     .social-buttons {
         flex-direction: column;
         gap: 10px;
@@ -322,7 +322,7 @@
     
     .social-btn {
         width: 100%;
-    }
+    } */
 }
 /* ============================================================
    2. IPAD PRO & PETITS LAPTOPS (993px -> 1200px)
@@ -345,16 +345,19 @@
     }
 
     .floating-illustration {
-        height: 40vh; 
+        height: 400px;
         left: 25%; 
     }
     
-    .social-buttons { flex-direction: column; gap: 10px; }
+    /* .social-buttons { 
+        flex-direction: column;
+        gap: 10px; }
+
     .social-btn { 
         width: 100%;
         height: 50px;
      }
-    .social-btn img { position: static; margin-right: 10px; }
+    .social-btn img { position: static; margin-right: 10px; } */
     
     .input-group input {
         font-size: 14px;
@@ -410,7 +413,7 @@
         margin-bottom: 60px;
     }
 
-    .social-btn {
+    /* .social-btn {
         height: 90px;
         font-size: 28px;
         border-radius: 15px;
@@ -420,7 +423,7 @@
     .social-btn img {
         width: 50px;
         left: 40px;
-    }
+    } */
 
     .password-group .toggle-password {
         font-size: 30px;
